--- a/action.yaml
+++ b/action.yaml
@@ -21,9 +21,12 @@ inputs:
   oidc-audience:
     description: "Custom aud claim for the signed Github ID token"
     required: false
+  project-id:
+    description: "Source project ID"
+    required: false
   project-slug:
     description: "Source project slug"
-    required: true
+    required: false
   env-slug:
     description: "Source environment slug"
     required: true
