--- a/action.yaml
+++ b/action.yaml
@@ -54,6 +54,9 @@ inputs:
     description: "If set to `true`, it will fetch all secrets from the specified base path and all of its subdirectories"
     required: false
     default: false
+  ca-bundle:
+    description: "Custom CA bundle certificate"
+    required: false
 runs:
   using: "node20"
   main: "index.js"
